--- a/index.html
+++ b/index.html
@@ -12,13 +12,20 @@
       font-family: Arial, sans-serif;
       scroll-behavior:smooth;
 
-      /* Subtle background to reduce “clinical white” while keeping content the same */
-      background-color:#f9fafb;
+      /* Softer, less “clinical” background (subtle texture + gentle colour wash) */
+      background-color:#f8fafc;
       background-image:
-        radial-gradient(1200px 600px at 10% -10%, rgba(229,72,154,0.10), transparent 60%),
-        radial-gradient(900px 500px at 95% 10%, rgba(13,59,102,0.10), transparent 60%),
-        radial-gradient(700px 400px at 40% 110%, rgba(229,72,154,0.06), transparent 60%);
+        radial-gradient(1200px 700px at 10% -10%, rgba(229,72,154,0.14), transparent 60%),
+        radial-gradient(900px 600px at 95% 5%, rgba(13,59,102,0.14), transparent 60%),
+        radial-gradient(700px 450px at 35% 110%, rgba(229,72,154,0.10), transparent 60%),
+        repeating-linear-gradient(45deg, rgba(13,59,102,0.035) 0 1px, transparent 1px 12px);
       background-attachment: fixed;
+    }
+
+    /* Subtle section divider for white areas (classy, minimal) */
+    .soft-divider{
+      background-image: linear-gradient(to right, rgba(13,59,102,0.10), rgba(229,72,154,0.10), rgba(13,59,102,0.10));
+      height: 1px;
     }
 
     /* Animations */
@@ -40,13 +47,8 @@
     .btn-main:hover{ transform:scale(1.05); background-color:#c92576; box-shadow:0 10px 22px rgba(0,0,0,0.25); }
 
     /* X icon hover */
-    .x-btn{
-      transition:0.25s ease;
-    }
-    .x-btn:hover{
-      transform:scale(1.08);
-      box-shadow:0 10px 22px rgba(0,0,0,0.25);
-    }
+    .x-btn{ transition:0.25s ease; }
+    .x-btn:hover{ transform:scale(1.08); box-shadow:0 10px 22px rgba(0,0,0,0.25); }
   </style>
 </head>
 
@@ -59,7 +61,7 @@
       📧 info@yorkshirerosecare.co.uk
     </a>
 
-    <!-- X LINK (added) -->
+    <!-- X LINK -->
     <span class="mx-2">|</span>
     <a
       href="https://x.com/YorksRoseCare"
@@ -70,7 +72,6 @@
       title="Follow us on X: @YorksRoseCare"
     >
       <span class="inline-flex items-center justify-center w-7 h-7 rounded-full bg-black x-btn" aria-hidden="true">
-        <!-- X icon -->
         <svg viewBox="0 0 24 24" class="w-4 h-4" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M18.9 2H22l-6.76 7.73L23.5 22h-6.5l-5.1-6.67L6.2 22H3l7.3-8.35L.5 2H7.2l4.6 6.08L18.9 2Zm-1.14 18h1.71L6.3 3.88H4.47L17.76 20Z" fill="white"/>
         </svg>
@@ -120,7 +121,7 @@
     </nav>
   </header>
 
-  <!-- HERO (UPDATED: image + bio side-by-side, more visually appealing) -->
+  <!-- HERO (image + bio side-by-side) -->
   <section class="bg-[var(--brand-blue)] text-white py-16 md:py-24 px-4 md:px-6">
     <div class="container mx-auto max-w-6xl">
       <div class="grid grid-cols-1 md:grid-cols-2 gap-10 items-center">
@@ -150,17 +151,13 @@
 
         <div class="order-1 md:order-2">
           <div class="relative">
-            <div class="absolute -inset-4 rounded-3xl bg-white/10 blur-xl"></div>
+            <div class="absolute -inset-5 rounded-3xl bg-white/10 blur-2xl"></div>
             <img
               src="https://raw.githubusercontent.com/robcranmer/yorkshire-rose-care/main/disabled4.jpg"
               alt="Support for people with learning disabilities"
-              class="relative w-full h-[280px] md:h-[420px] rounded-3xl shadow-2xl object-cover border-4 border-white/20"
+              class="relative w-full h-[290px] md:h-[430px] rounded-3xl shadow-2xl object-cover border-4 border-white/20"
             />
-            <div class="absolute -bottom-4 left-4 right-4 bg-white/10 backdrop-blur rounded-2xl px-4 py-3 border border-white/20">
-              <p class="text-sm md:text-base font-semibold">
-                Compassionate, person-centred support across Yorkshire.
-              </p>
-            </div>
+            <!-- caption removed as requested -->
           </div>
         </div>
 
@@ -168,7 +165,10 @@
     </div>
   </section>
 
-  <!-- ABOUT (Opposite colour wrap: pink content, BLUE border) -->
+  <!-- Divider -->
+  <div class="container mx-auto px-4 md:px-6"><div class="soft-divider"></div></div>
+
+  <!-- ABOUT -->
   <section id="about" class="container mx-auto px-4 md:px-6 py-16 md:py-20">
     <div class="bg-[var(--brand-pink)] text-white p-8 md:p-10 rounded-2xl shadow-xl leading-relaxed card-float border-4 border-[var(--brand-blue)]">
       <h2 class="text-3xl md:text-4xl font-bold mb-6 text-center">About Us</h2>
@@ -189,8 +189,8 @@
     </div>
   </section>
 
-  <!-- VALUES (Opposite colour wrap: cards keep their fill colour, border is the opposite) -->
-  <section id="values" class="bg-white/80 backdrop-blur py-16 md:py-20 px-4 md:px-6">
+  <!-- VALUES -->
+  <section id="values" class="bg-white/85 backdrop-blur py-16 md:py-20 px-4 md:px-6">
     <div class="container mx-auto">
       <h2 class="text-3xl md:text-4xl font-bold text-center mb-12 text-[var(--brand-blue)]">Our Values</h2>
 
@@ -215,7 +215,7 @@
     </div>
   </section>
 
-  <!-- SERVICES (Opposite colour wrap: white cards with BLUE borders, because section is blue) -->
+  <!-- SERVICES -->
   <section id="services" class="bg-[var(--brand-blue)] py-16 md:py-20 px-4 md:px-6 text-white">
     <div class="container mx-auto">
 
@@ -225,6 +225,15 @@
 
         <div class="bg-white text-gray-900 p-6 md:p-8 rounded-2xl shadow-xl card-float animate-fade border-4 border-[var(--brand-blue)]">
           <h3 class="text-xl md:text-2xl font-bold text-[var(--brand-blue)] mb-4">Domiciliary Care</h3>
+
+          <!-- Service Image (added back) -->
+          <img
+            src="https://raw.githubusercontent.com/robcranmer/yorkshire-rose-care/main/disabled2.jpg"
+            alt="Domiciliary care support"
+            class="mb-4 rounded-xl shadow-md w-full h-48 object-cover"
+            loading="lazy"
+          />
+
           <p class="mb-4">
             We deliver tailored home-based support that helps people maintain independence, safety and structure in everyday life.
             This can include personal care, meal preparation, prompting and encouragement, and practical help with routines.
@@ -240,6 +249,15 @@
 
         <div class="bg-white text-gray-900 p-6 md:p-8 rounded-2xl shadow-xl card-float animate-fade border-4 border-[var(--brand-blue)]">
           <h3 class="text-xl md:text-2xl font-bold text-[var(--brand-blue)] mb-4">Supported Living</h3>
+
+          <!-- Service Image (added back) -->
+          <img
+            src="https://raw.githubusercontent.com/robcranmer/yorkshire-rose-care/main/disabled3.jpg"
+            alt="Supported living and independence"
+            class="mb-4 rounded-xl shadow-md w-full h-48 object-cover"
+            loading="lazy"
+          />
+
           <p class="mb-4">
             Supported Living is about enabling people to live as independently as possible, with support shaped around their goals.
             We help individuals develop life skills, maintain their tenancy and feel confident within their home environment.
@@ -255,6 +273,15 @@
 
         <div class="bg-white text-gray-900 p-6 md:p-8 rounded-2xl shadow-xl card-float animate-fade border-4 border-[var(--brand-blue)]">
           <h3 class="text-xl md:text-2xl font-bold text-[var(--brand-blue)] mb-4">Specialist Support</h3>
+
+          <!-- Service Image (added back) -->
+          <img
+            src="https://raw.githubusercontent.com/robcranmer/yorkshire-rose-care/main/disabled1.jpg"
+            alt="Specialist learning disability support"
+            class="mb-4 rounded-xl shadow-md w-full h-48 object-cover"
+            loading="lazy"
+          />
+
           <p class="mb-4">
             We support individuals with complex needs using a trauma-informed, strengths-based approach.
             Our support is built around communication, emotional wellbeing, confidence and practical life skills.
@@ -279,8 +306,8 @@
     </div>
   </section>
 
-  <!-- TEAM (with photos as requested) -->
-  <section id="team" class="bg-white/80 backdrop-blur py-16 md:py-20 px-4 md:px-6">
+  <!-- TEAM -->
+  <section id="team" class="bg-white/85 backdrop-blur py-16 md:py-20 px-4 md:px-6">
     <div class="container mx-auto">
 
       <h2 class="text-3xl md:text-4xl font-bold text-center mb-12 text-[var(--brand-blue)]">Meet the Team</h2>
@@ -293,6 +320,7 @@
             src="https://raw.githubusercontent.com/robcranmer/yorkshire-rose-care/main/robert-cranmer.jpg"
             alt="Robert Cranmer"
             class="w-28 h-28 md:w-32 md:h-32 mx-auto mb-4 rounded-full object-cover object-top border-4 border-white shadow-lg"
+            loading="lazy"
           />
           <h3 class="text-2xl md:text-3xl font-bold mb-2">Robert Cranmer</h3>
           <p class="text-lg font-semibold mb-4">Director</p>
@@ -307,6 +335,7 @@
             src="yrc-logo.jpg"
             alt="Yorkshire Rose Care Logo"
             class="w-28 h-28 md:w-32 md:h-32 mx-auto mb-4 rounded-full object-cover bg-white border-4 border-white shadow-lg p-2"
+            loading="lazy"
           />
           <h3 class="text-2xl md:text-3xl font-bold mb-2">Salman Khan</h3>
           <p class="text-lg font-semibold mb-4">Director</p>
@@ -321,6 +350,7 @@
             src="yrc-logo.jpg"
             alt="Yorkshire Rose Care Logo"
             class="w-28 h-28 md:w-32 md:h-32 mx-auto mb-4 rounded-full object-cover bg-white border-4 border-white shadow-lg p-2"
+            loading="lazy"
           />
           <h3 class="text-2xl md:text-3xl font-bold mb-2">Support Workers</h3>
           <p class="text-lg font-semibold mb-4">Our Frontline Team</p>
@@ -333,8 +363,8 @@
     </div>
   </section>
 
-  <!-- TESTIMONIALS (Opposite colour wrap: outer fill with opposite border) -->
-  <section id="testimonials" class="bg-white/80 backdrop-blur py-16 md:py-20 px-4 md:px-6">
+  <!-- TESTIMONIALS -->
+  <section id="testimonials" class="bg-white/85 backdrop-blur py-16 md:py-20 px-4 md:px-6">
     <div class="container mx-auto max-w-5xl text-center">
 
       <h2 class="text-3xl md:text-4xl font-bold text-[var(--brand-blue)] mb-12">Testimonials</h2>
@@ -463,7 +493,7 @@
         </button>
       </form>
 
-      <!-- Contact section X link (added) -->
+      <!-- Contact section X link -->
       <div class="mt-8 text-center">
         <a
           href="https://x.com/YorksRoseCare"
@@ -490,7 +520,7 @@
       </div>
 
       <div class="mt-10 text-center leading-relaxed text-base md:text-lg">
-        <p class="font-bold">Oakwood Court</p>
+        <p class="font-bold">15C Suite Oakwood Court</p>
         <p>City Road, Bradford, BD8 8JY</p>
         <p class="font-semibold mt-2">Tel: 01274 449277</p>
       </div>
