--- a/index.html
+++ b/index.html
@@ -8,24 +8,32 @@
 
   <style>
     :root { --brand-blue:#0d3b66; --brand-pink:#e5489a; }
+
     body {
       font-family: Arial, sans-serif;
       scroll-behavior:smooth;
 
-      /* Softer, less “clinical” background (subtle texture + gentle colour wash) */
-      background-color:#f8fafc;
+      /* More “premium” background: soft colour wash + subtle texture */
+      background-color:#f7f8fb;
       background-image:
-        radial-gradient(1200px 700px at 10% -10%, rgba(229,72,154,0.14), transparent 60%),
-        radial-gradient(900px 600px at 95% 5%, rgba(13,59,102,0.14), transparent 60%),
-        radial-gradient(700px 450px at 35% 110%, rgba(229,72,154,0.10), transparent 60%),
-        repeating-linear-gradient(45deg, rgba(13,59,102,0.035) 0 1px, transparent 1px 12px);
+        radial-gradient(1100px 650px at 8% -10%, rgba(229,72,154,0.16), transparent 60%),
+        radial-gradient(900px 600px at 98% 0%, rgba(13,59,102,0.16), transparent 60%),
+        radial-gradient(800px 520px at 40% 115%, rgba(229,72,154,0.10), transparent 60%),
+        repeating-linear-gradient(135deg, rgba(13,59,102,0.035) 0 1px, transparent 1px 12px);
       background-attachment: fixed;
     }
 
-    /* Subtle section divider for white areas (classy, minimal) */
+    /* Classy section surface (consistent “carded” feel without changing content) */
+    .surface {
+      background: rgba(255,255,255,0.82);
+      backdrop-filter: blur(10px);
+      -webkit-backdrop-filter: blur(10px);
+    }
+
+    /* Subtle dividers to break up sections */
     .soft-divider{
-      background-image: linear-gradient(to right, rgba(13,59,102,0.10), rgba(229,72,154,0.10), rgba(13,59,102,0.10));
       height: 1px;
+      background-image: linear-gradient(to right, rgba(13,59,102,0.08), rgba(229,72,154,0.18), rgba(13,59,102,0.08));
     }
 
     /* Animations */
@@ -49,6 +57,26 @@
     /* X icon hover */
     .x-btn{ transition:0.25s ease; }
     .x-btn:hover{ transform:scale(1.08); box-shadow:0 10px 22px rgba(0,0,0,0.25); }
+
+    /* Consistent section headers */
+    .section-title{
+      letter-spacing: -0.01em;
+    }
+
+    /* Hero gradient overlay to soften large blue block */
+    .hero-grad{
+      background-image:
+        radial-gradient(900px 500px at 20% 20%, rgba(229,72,154,0.20), transparent 60%),
+        radial-gradient(900px 500px at 90% 10%, rgba(255,255,255,0.10), transparent 60%);
+    }
+
+    /* Alternating “brand-tint” sections (breaks blue/pink blocks while keeping brand colours) */
+    .tint-blue{
+      background: linear-gradient(180deg, rgba(13,59,102,0.10), rgba(255,255,255,0.0));
+    }
+    .tint-pink{
+      background: linear-gradient(180deg, rgba(229,72,154,0.10), rgba(255,255,255,0.0));
+    }
   </style>
 </head>
 
@@ -81,7 +109,7 @@
   </div>
 
   <!-- HEADER -->
-  <header class="bg-white/90 backdrop-blur shadow-md border-b-4 border-[var(--brand-pink)] sticky top-0 z-50">
+  <header class="bg-white/85 backdrop-blur shadow-md border-b-4 border-[var(--brand-pink)] sticky top-0 z-50">
     <div class="container mx-auto px-4 md:px-6 py-4 flex justify-between items-center">
 
       <div class="flex items-center space-x-3">
@@ -121,8 +149,8 @@
     </nav>
   </header>
 
-  <!-- HERO (image + bio side-by-side) -->
-  <section class="bg-[var(--brand-blue)] text-white py-16 md:py-24 px-4 md:px-6">
+  <!-- HERO -->
+  <section class="bg-[var(--brand-blue)] text-white py-16 md:py-24 px-4 md:px-6 hero-grad">
     <div class="container mx-auto max-w-6xl">
       <div class="grid grid-cols-1 md:grid-cols-2 gap-10 items-center">
         <div class="order-2 md:order-1">
@@ -157,7 +185,6 @@
               alt="Support for people with learning disabilities"
               class="relative w-full h-[290px] md:h-[430px] rounded-3xl shadow-2xl object-cover border-4 border-white/20"
             />
-            <!-- caption removed as requested -->
           </div>
         </div>
 
@@ -168,31 +195,33 @@
   <!-- Divider -->
   <div class="container mx-auto px-4 md:px-6"><div class="soft-divider"></div></div>
 
-  <!-- ABOUT -->
-  <section id="about" class="container mx-auto px-4 md:px-6 py-16 md:py-20">
-    <div class="bg-[var(--brand-pink)] text-white p-8 md:p-10 rounded-2xl shadow-xl leading-relaxed card-float border-4 border-[var(--brand-blue)]">
-      <h2 class="text-3xl md:text-4xl font-bold mb-6 text-center">About Us</h2>
+  <!-- ABOUT (kept content, updated section surface) -->
+  <section id="about" class="tint-pink py-16 md:py-20">
+    <div class="container mx-auto px-4 md:px-6">
+      <div class="bg-[var(--brand-pink)] text-white p-8 md:p-10 rounded-2xl shadow-xl leading-relaxed card-float border-4 border-[var(--brand-blue)]">
+        <h2 class="text-3xl md:text-4xl font-bold mb-6 text-center section-title">About Us</h2>
 
-      <p class="text-base md:text-lg mb-4">
-        Yorkshire Rose Care was created with a passion for person-centred, respectful support for adults with mental health needs and learning disabilities.
-        We’re proud to deliver care that feels grounded, consistent and genuinely human.
-      </p>
+        <p class="text-base md:text-lg mb-4">
+          Yorkshire Rose Care was created with a passion for person-centred, respectful support for adults with mental health needs and learning disabilities.
+          We’re proud to deliver care that feels grounded, consistent and genuinely human.
+        </p>
 
-      <p class="text-base md:text-lg mb-4">
-        We work alongside individuals, families and professionals to build routines, skills and confidence, supporting people to live safely,
-        make choices and feel part of their community.
-      </p>
+        <p class="text-base md:text-lg mb-4">
+          We work alongside individuals, families and professionals to build routines, skills and confidence, supporting people to live safely,
+          make choices and feel part of their community.
+        </p>
 
-      <p class="text-base md:text-lg">
-        Our mission is simple: help people live well, live safely, and live with confidence, the Yorkshire way.
-      </p>
+        <p class="text-base md:text-lg">
+          Our mission is simple: help people live well, live safely, and live with confidence, the Yorkshire way.
+        </p>
+      </div>
     </div>
   </section>
 
-  <!-- VALUES -->
-  <section id="values" class="bg-white/85 backdrop-blur py-16 md:py-20 px-4 md:px-6">
-    <div class="container mx-auto">
-      <h2 class="text-3xl md:text-4xl font-bold text-center mb-12 text-[var(--brand-blue)]">Our Values</h2>
+  <!-- VALUES (moved away from solid white/solid blocks) -->
+  <section id="values" class="tint-blue py-16 md:py-20 px-4 md:px-6">
+    <div class="container mx-auto surface rounded-3xl p-6 md:p-10 shadow-xl border border-white/40">
+      <h2 class="text-3xl md:text-4xl font-bold text-center mb-12 text-[var(--brand-blue)] section-title">Our Values</h2>
 
       <div class="grid grid-cols-1 md:grid-cols-3 gap-8 md:gap-10">
 
@@ -215,18 +244,17 @@
     </div>
   </section>
 
-  <!-- SERVICES -->
-  <section id="services" class="bg-[var(--brand-blue)] py-16 md:py-20 px-4 md:px-6 text-white">
+  <!-- SERVICES (kept blue, but give it depth with overlay) -->
+  <section id="services" class="bg-[var(--brand-blue)] py-16 md:py-20 px-4 md:px-6 text-white hero-grad">
     <div class="container mx-auto">
 
-      <h2 class="text-3xl md:text-4xl font-bold text-center mb-12">What We Offer</h2>
+      <h2 class="text-3xl md:text-4xl font-bold text-center mb-12 section-title">What We Offer</h2>
 
       <div class="grid grid-cols-1 md:grid-cols-3 gap-8 md:gap-10">
 
         <div class="bg-white text-gray-900 p-6 md:p-8 rounded-2xl shadow-xl card-float animate-fade border-4 border-[var(--brand-blue)]">
           <h3 class="text-xl md:text-2xl font-bold text-[var(--brand-blue)] mb-4">Domiciliary Care</h3>
 
-          <!-- Service Image (added back) -->
           <img
             src="https://raw.githubusercontent.com/robcranmer/yorkshire-rose-care/main/disabled2.jpg"
             alt="Domiciliary care support"
@@ -250,7 +278,6 @@
         <div class="bg-white text-gray-900 p-6 md:p-8 rounded-2xl shadow-xl card-float animate-fade border-4 border-[var(--brand-blue)]">
           <h3 class="text-xl md:text-2xl font-bold text-[var(--brand-blue)] mb-4">Supported Living</h3>
 
-          <!-- Service Image (added back) -->
           <img
             src="https://raw.githubusercontent.com/robcranmer/yorkshire-rose-care/main/disabled3.jpg"
             alt="Supported living and independence"
@@ -274,7 +301,6 @@
         <div class="bg-white text-gray-900 p-6 md:p-8 rounded-2xl shadow-xl card-float animate-fade border-4 border-[var(--brand-blue)]">
           <h3 class="text-xl md:text-2xl font-bold text-[var(--brand-blue)] mb-4">Specialist Support</h3>
 
-          <!-- Service Image (added back) -->
           <img
             src="https://raw.githubusercontent.com/robcranmer/yorkshire-rose-care/main/disabled1.jpg"
             alt="Specialist learning disability support"
@@ -306,15 +332,16 @@
     </div>
   </section>
 
-  <!-- TEAM -->
-  <section id="team" class="bg-white/85 backdrop-blur py-16 md:py-20 px-4 md:px-6">
-    <div class="container mx-auto">
+  <!-- Divider -->
+  <div class="container mx-auto px-4 md:px-6"><div class="soft-divider"></div></div>
 
-      <h2 class="text-3xl md:text-4xl font-bold text-center mb-12 text-[var(--brand-blue)]">Meet the Team</h2>
+  <!-- TEAM -->
+  <section id="team" class="tint-pink py-16 md:py-20 px-4 md:px-6">
+    <div class="container mx-auto surface rounded-3xl p-6 md:p-10 shadow-xl border border-white/40">
+      <h2 class="text-3xl md:text-4xl font-bold text-center mb-12 text-[var(--brand-blue)] section-title">Meet the Team</h2>
 
       <div class="grid grid-cols-1 md:grid-cols-3 gap-8 md:gap-10">
 
-        <!-- Robert -->
         <div class="bg-[var(--brand-pink)] text-white p-6 md:p-8 rounded-2xl shadow-xl card-float animate-fade border-4 border-[var(--brand-blue)] text-center">
           <img
             src="https://raw.githubusercontent.com/robcranmer/yorkshire-rose-care/main/robert-cranmer.jpg"
@@ -329,7 +356,6 @@
           <p>A proud Bradford City fan and founder of the organisation recognised for his commitment to his work in mental health across Yorkshire..</p>
         </div>
 
-        <!-- Salman uses logo -->
         <div class="bg-[var(--brand-blue)] text-white p-6 md:p-8 rounded-2xl shadow-xl card-float animate-fade border-4 border-[var(--brand-pink)] text-center">
           <img
             src="yrc-logo.jpg"
@@ -344,7 +370,6 @@
           <p>Outside of work, Salman enjoys time with family and is well known for his calm, approachable personality.</p>
         </div>
 
-        <!-- Support Workers uses logo -->
         <div class="bg-[var(--brand-pink)] text-white p-6 md:p-8 rounded-2xl shadow-xl card-float animate-fade border-4 border-[var(--brand-blue)] text-center">
           <img
             src="yrc-logo.jpg"
@@ -364,10 +389,10 @@
   </section>
 
   <!-- TESTIMONIALS -->
-  <section id="testimonials" class="bg-white/85 backdrop-blur py-16 md:py-20 px-4 md:px-6">
-    <div class="container mx-auto max-w-5xl text-center">
+  <section id="testimonials" class="tint-blue py-16 md:py-20 px-4 md:px-6">
+    <div class="container mx-auto surface rounded-3xl p-6 md:p-10 shadow-xl border border-white/40 text-center">
 
-      <h2 class="text-3xl md:text-4xl font-bold text-[var(--brand-blue)] mb-12">Testimonials</h2>
+      <h2 class="text-3xl md:text-4xl font-bold text-[var(--brand-blue)] mb-12 section-title">Testimonials</h2>
 
       <div class="grid grid-cols-1 md:grid-cols-2 gap-10">
 
@@ -412,60 +437,62 @@
   </section>
 
   <!-- PARTNERS -->
-  <section id="partners" class="container mx-auto px-4 md:px-6 py-16 md:py-20">
-    <h2 class="text-3xl md:text-4xl font-bold text-[var(--brand-blue)] text-center mb-8">Our Partners</h2>
+  <section id="partners" class="tint-pink py-16 md:py-20 px-4 md:px-6">
+    <div class="container mx-auto surface rounded-3xl p-6 md:p-10 shadow-xl border border-white/40">
+      <h2 class="text-3xl md:text-4xl font-bold text-[var(--brand-blue)] text-center mb-8 section-title">Our Partners</h2>
 
-    <p class="text-center max-w-4xl mx-auto text-base md:text-lg mb-12 text-gray-700">
-      We are proud to collaborate with organisations that champion mental health, inclusion and community wellbeing across Yorkshire.
-      These partnerships reflect shared values, promoting support networks, reducing stigma and improving outcomes for people and communities.
-    </p>
+      <p class="text-center max-w-4xl mx-auto text-base md:text-lg mb-12 text-gray-700">
+        We are proud to collaborate with organisations that champion mental health, inclusion and community wellbeing across Yorkshire.
+        These partnerships reflect shared values, promoting support networks, reducing stigma and improving outcomes for people and communities.
+      </p>
 
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-8 md:gap-10">
+      <div class="grid grid-cols-1 md:grid-cols-3 gap-8 md:gap-10">
 
-      <a href="https://www.bradfordcitycf.org.uk" target="_blank"
-         class="partner-card block p-8 rounded-2xl bg-[var(--brand-pink)] text-white shadow-xl text-center border-4 border-[var(--brand-blue)] card-float">
-        <h3 class="text-xl md:text-2xl font-bold mb-2">Bradford City Community Foundation</h3>
-        <p class="text-sm opacity-95">Community programmes supporting wellbeing, confidence and inclusion through sport and outreach.</p>
-      </a>
+        <a href="https://www.bradfordcitycf.org.uk" target="_blank"
+           class="partner-card block p-8 rounded-2xl bg-[var(--brand-pink)] text-white shadow-xl text-center border-4 border-[var(--brand-blue)] card-float">
+          <h3 class="text-xl md:text-2xl font-bold mb-2">Bradford City Community Foundation</h3>
+          <p class="text-sm opacity-95">Community programmes supporting wellbeing, confidence and inclusion through sport and outreach.</p>
+        </a>
 
-      <a href="https://www.rugbyleaguecares.org" target="_blank"
-         class="partner-card block p-8 rounded-2xl bg-[var(--brand-blue)] text-white shadow-xl text-center border-4 border-[var(--brand-pink)] card-float">
-        <h3 class="text-xl md:text-2xl font-bold mb-2">Rugby League Cares</h3>
-        <p class="text-sm opacity-95">Wellbeing initiatives promoting positive mental health, resilience and community connection.</p>
-      </a>
+        <a href="https://www.rugbyleaguecares.org" target="_blank"
+           class="partner-card block p-8 rounded-2xl bg-[var(--brand-blue)] text-white shadow-xl text-center border-4 border-[var(--brand-pink)] card-float">
+          <h3 class="text-xl md:text-2xl font-bold mb-2">Rugby League Cares</h3>
+          <p class="text-sm opacity-95">Wellbeing initiatives promoting positive mental health, resilience and community connection.</p>
+        </a>
 
-      <a href="https://www.mindinbradford.org.uk" target="_blank"
-         class="partner-card block p-8 rounded-2xl bg-[var(--brand-pink)] text-white shadow-xl text-center border-4 border-[var(--brand-blue)] card-float">
-        <h3 class="text-xl md:text-2xl font-bold mb-2">Mind in Bradford</h3>
-        <p class="text-sm opacity-95">Local mental health support, crisis services and wellbeing activities across Bradford.</p>
-      </a>
+        <a href="https://www.mindinbradford.org.uk" target="_blank"
+           class="partner-card block p-8 rounded-2xl bg-[var(--brand-pink)] text-white shadow-xl text-center border-4 border-[var(--brand-blue)] card-float">
+          <h3 class="text-xl md:text-2xl font-bold mb-2">Mind in Bradford</h3>
+          <p class="text-sm opacity-95">Local mental health support, crisis services and wellbeing activities across Bradford.</p>
+        </a>
 
-      <a href="https://www.samaritans.org" target="_blank"
-         class="partner-card block p-8 rounded-2xl bg-[var(--brand-blue)] text-white shadow-xl text-center border-4 border-[var(--brand-pink)] card-float">
-        <h3 class="text-xl md:text-2xl font-bold mb-2">Samaritans</h3>
-        <p class="text-sm opacity-95">Emotional support for anyone experiencing distress, a vital part of prevention and recovery.</p>
-      </a>
+        <a href="https://www.samaritans.org" target="_blank"
+           class="partner-card block p-8 rounded-2xl bg-[var(--brand-blue)] text-white shadow-xl text-center border-4 border-[var(--brand-pink)] card-float">
+          <h3 class="text-xl md:text-2xl font-bold mb-2">Samaritans</h3>
+          <p class="text-sm opacity-95">Emotional support for anyone experiencing distress, a vital part of prevention and recovery.</p>
+        </a>
 
-      <a href="https://andysmanclub.co.uk" target="_blank"
-         class="partner-card block p-8 rounded-2xl bg-[var(--brand-pink)] text-white shadow-xl text-center border-4 border-[var(--brand-blue)] card-float">
-        <h3 class="text-xl md:text-2xl font-bold mb-2">Andy’s Man Club</h3>
-        <p class="text-sm opacity-95">Peer support spaces helping men talk openly, reduce isolation and improve mental wellbeing.</p>
-      </a>
+        <a href="https://andysmanclub.co.uk" target="_blank"
+           class="partner-card block p-8 rounded-2xl bg-[var(--brand-pink)] text-white shadow-xl text-center border-4 border-[var(--brand-blue)] card-float">
+          <h3 class="text-xl md:text-2xl font-bold mb-2">Andy’s Man Club</h3>
+          <p class="text-sm opacity-95">Peer support spaces helping men talk openly, reduce isolation and improve mental wellbeing.</p>
+        </a>
 
-      <a href="https://www.bradfordhospitalscharity.org" target="_blank"
-         class="partner-card block p-8 rounded-2xl bg-[var(--brand-blue)] text-white shadow-xl text-center border-4 border-[var(--brand-pink)] card-float">
-        <h3 class="text-xl md:text-2xl font-bold mb-2">Bradford Hospitals Charity</h3>
-        <p class="text-sm opacity-95">Supporting hospital services and patient wellbeing through charitable funding and community action.</p>
-      </a>
+        <a href="https://www.bradfordhospitalscharity.org" target="_blank"
+           class="partner-card block p-8 rounded-2xl bg-[var(--brand-blue)] text-white shadow-xl text-center border-4 border-[var(--brand-pink)] card-float">
+          <h3 class="text-xl md:text-2xl font-bold mb-2">Bradford Hospitals Charity</h3>
+          <p class="text-sm opacity-95">Supporting hospital services and patient wellbeing through charitable funding and community action.</p>
+        </a>
 
+      </div>
     </div>
   </section>
 
-  <!-- CONTACT -->
-  <section id="contact" class="bg-[var(--brand-pink)] py-16 md:py-20 px-4 md:px-6 text-white">
+  <!-- CONTACT (kept content, consistent surface) -->
+  <section id="contact" class="bg-[var(--brand-pink)] py-16 md:py-20 px-4 md:px-6 text-white hero-grad">
     <div class="container mx-auto max-w-3xl">
 
-      <h2 class="text-3xl md:text-4xl font-bold text-center mb-10">Contact Us</h2>
+      <h2 class="text-3xl md:text-4xl font-bold text-center mb-10 section-title">Contact Us</h2>
 
       <form action="https://formspree.io/f/xnnegodr" method="POST"
             class="bg-white text-gray-900 p-6 md:p-8 rounded-2xl shadow-xl border-4 border-[var(--brand-blue)] card-float">
